# Backend_Dev_Capstone_Meta

./: README.md  pyproject.toml
src/backend_dev_capstone_meta/littlelemon/littlelemon/: settings.py  urls.py
src/backend_dev_capstone_meta/littlelemon/restaurant/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/backend_dev_capstone_meta/littlelemon/restaurant/migrations/: 0001_initial.py  0002_rename_menu_menuitem.py  0003_rename_bookingdate_booking_bookingdate_and_more.py  0004_menuitem_menu_item_description.py  0005_rename_bookingdate_booking_booking_date_and_more.py  0006_booking_reservation_slot.py
src/backend_dev_capstone_meta/littlelemon/restaurant/static/css/: style.css
src/backend_dev_capstone_meta/littlelemon/restaurant/templates/: book.html  bookings.html  index.html  menu_item.html
src/backend_dev_capstone_meta/littlelemon/restaurant/templates/partials/: _header.html
src/backend_dev_capstone_meta/littlelemon/tests/: test_models.py  test_views.py
